<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_profile_header">

        <!--        <EditTextPreference-->
        <!--            app:key="allergy"-->
        <!--            app:title="@string/allergy_title"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

        <ListPreference
            app:defaultValue="none"
            app:entries="@array/allergy_entries"
            app:entryValues="@array/allergy_values"
            app:key="allergy"
            app:title="@string/allergy_title"
            app:useSimpleSummaryProvider="true" />

        <!--        <MultiSelectListPreference-->
        <!--            app:defaultValue="false"-->
        <!--            app:entries="@array/allergy_entries"-->
        <!--            app:entryValues="@array/allergy_values"-->
        <!--            app:key="allergy"-->
        <!--            app:title="@string/allergy_title"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location_header">

        <EditTextPreference
            app:key="zip_code"
            app:title="@string/location_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>