<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="-153dp">

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="1000dp"
            android:outlineProvider="none"
            android:padding="20dp">

            <!--Formatting for title of page - in this case "Resources"-->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="48dp"
                android:fontFamily="@font/montserrat_bold_font"
                android:text="@string/Resources"
                android:textAlignment="center"
                android:textColor="@color/mainFont"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/textView0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:layout_editor_absoluteX="20dp" />

            <!--Formatting for the first subsection text-->
            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat_bold_font"
                android:text="@string/Farmers_Markets"
                android:textAlignment="center"
                android:textColor="@color/mainFont"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/listView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Itemized list that will display the items in the array specific to the first category-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="20dp">

            </androidx.recyclerview.widget.RecyclerView>

            <!--Formatting for the second subsection text-->
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold_font"
                android:text="@string/Government_Nutrition_Program"
                android:textAlignment="center"
                android:textColor="@color/mainFont"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listView" />

            <!--Itemized list that will display the items in the array specific to the second category-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView1"
                tools:layout_editor_absoluteX="20dp">

            </androidx.recyclerview.widget.RecyclerView>

            <!--Formatting for the third subsection text-->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold_font"
                android:text="@string/Healthy_Eating"
                android:textAlignment="center"
                android:textColor="@color/mainFont"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listView1" />

            <!--Itemized list that will display the items in the array specific to the third category-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="20dp">

            </androidx.recyclerview.widget.RecyclerView>

            <!--Formatting for the fourth subsection text-->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_bold_font"
                android:text="@string/Community_Food_Support"
                android:textAlignment="center"
                android:textColor="@color/mainFont"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/listView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listView2" />

            <!--Itemized list that will display the items in the array specific to the fourth category-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listView2"
                tools:layout_editor_absoluteX="20dp">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:itemBackground="@color/harvest4us_beige"
            app:itemIconTint="@color/cardview_dark_background"
            app:itemTextColor="@color/cardview_dark_background"
            app:labelVisibilityMode="labeled"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu" />

    </LinearLayout>

</RelativeLayout>
